[Payments] Show what's missing for incomplete payment methods.

Refactored logic to determine the completeness of a payment instrument.

BUG=711358
TEST=components_unittests

Review-Url: https://codereview.chromium.org/2813203004
Cr-Commit-Position: refs/heads/master@{#465348}

Former-commit-id: c45bd0f5bfda65c49b54527b994c08e8cf7203b5